// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSimple matches disabled state 1`] = `
<button
  className="btn"
  disabled={true}
>
  Disabled
</button>
`;

exports[`ButtonSimple matches loading state 1`] = `
<button
  className="btn loading"
  disabled={true}
>
  Disabled
  ...
</button>
`;

exports[`ButtonSimple matches primary (default) type snapshot 1`] = `
<button
  className="btn"
  disabled={false}
>
  Primary
</button>
`;

exports[`ButtonSimple matches secondary type snapshot 1`] = `
<button
  className="btn secondary"
  disabled={false}
>
  Secondary
</button>
`;

exports[`ButtonSimple matches with external className as object 1`] = `
<button
  className="btn external-classname-true"
  disabled={false}
>
  Hello
</button>
`;

exports[`ButtonSimple matches with external className as string 1`] = `
<button
  className="btn external-classname"
  disabled={false}
>
  Hello
</button>
`;
